--- a/css/jon.css
+++ b/css/jon.css
@@ -18,6 +18,7 @@ html, body {
 	min-height: 9vh;
 	text-align: center;
 	font-size: 26px;
+	font-style: italic;
 /*	background-color: rgba(0,0,0,0.1);*/
 	color: black;
 
